--- a/src/components/Meals/summaryCard.css
+++ b/src/components/Meals/summaryCard.css
@@ -1,18 +1,18 @@
 .summary-card {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 600px;
-    height:200px;
-    background-color: rgb(70, 70, 70);
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.24);
-    border-radius: 10px;
-    padding: 10px;
     text-align: center;
+    max-width: 45rem;
+    width: 90%;
+    margin: auto;
+    margin-top: -10rem;
+    position: relative;
+    background-color: #383838;
     color: white;
+    border-radius: 14px;
+    padding: 1rem;
+    box-shadow: 0 1px 18px 10px rgba(0, 0, 0, 0.25);
 
     h2 {
-        margin: 0;
+        font-size: 2rem;
+        margin-top: 0;
     }
 }
