added css to list items

--- a/src/components/Layouts/header.css
+++ b/src/components/Layouts/header.css
@@ -1,14 +1,30 @@
 .header {
+    position: fixed;
     background-color: #bb4343;
     color: white;
     padding: 0 20px;
     margin: 0;
     display: flex;
     width: 100%;
+    z-index: 10;
 }
 
 .header h3 {
     margin: 0;
     padding: 10px 0;
     font-size: 28px;
+}
+
+.main-image {
+    width: 100%;
+    height: 20rem;
+    z-index: 0;
+    overflow: hidden;
+}
+
+.header-image {
+    width: 110%;
+    height: 100%;
+    object-fit: cover;
+    transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
 }
