added functionality to add item to cart

--- a/src/components/Meals/Cart.css
+++ b/src/components/Meals/Cart.css
@@ -6,6 +6,11 @@
   overflow: auto;
 }
 
+.cart-item {
+    display: flex;
+    justify-content: space-between;
+}
+
 .total {
   display: flex;
   justify-content: space-between;
